Wed Jun 20 19:19:15 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_up_down): clean up
	(gtk_tree_view_move_cursor_page_up_down): implement.

Wed Jun 20 05:32:05 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkspinbutton.c: make maximum digits compile time configurable
	via MAX_DIGITS and up to 20. 5 was just ridiculously small.
	don't use automatic fixed size buffer for printf-ing floats, doubles
 	can expand to really _huge_ strings, use g_strdup_printf() instead.

Wed Jun 20 04:28:24 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkrange.c (gtk_range_class_init): hum, "adjustment" was a
	construct property in 1.2 and still needs to be.

	* gtk/gtkwidget.c: "composite_child" is not a settable property.

Tue Jun 19 19:13:19 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c (gtk_list_store_clear): 
	* gtk/gtktreestore.c (gtk_tree_store_clear): New functions to
	clear a model.

Mon Jun 18 02:00:49 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_get_property): fix PROP_EVENTS.

	* gtk/Makefile.am:
	* gtk/gtk.h: disabled GtkPacker compilation.

	* gtk/gtkarg.[hc], gtk/gtkargcollector.c: got rid of these.

	* gtk/gtknotebook.c:
	* gtk/gtktable.c:
	* gtk/gtkbox.c: ported this over to child properties.

	* gtk/gtksettings.c: fetch class properties via
	g_object_class_list_properties().

	* gtk/gtkcontainer.[hc]: implemented child properties, got rid of the
	child arg interface. use gobjectnotifyqueue.c for child property
	notification.

	* gtk/gtkwidget.[hc]: provide necessary means for container child
	properties, i.e. ::child_notify signal,
	gtk_widget_freeze_child_notify(),
	gtk_widget_child_notify(),
	gtk_widget_thaw_child_notify().

	* tests/testgtk.c: removed inferior property handling code, for
	property editing, a generic module should be used, and GLE
	coincidentally fullfills that purpose.

	* docs/reference/Makefile.am: disabled gtk docs building, gtk-doc