@@ -1,3 +1,8 @@
+Thu Jun 21 02:13:40 2001  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtkcontainer.[hc]: added gtk_container_child_set_property() and
+	gtk_container_child_get_property().
+
 Wed Jun 20 19:19:15 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_up_down): clean up
